--- a/.github/workflows/Samplemain.yml
+++ b/.github/workflows/Samplemain.yml
@@ -2,12 +2,14 @@
 name : A Workflow for my Hello World file
 on : push
 jobs : 
-  build :
-  name : Hello World Action
+  build : 
+  name : 
+        Hello World Action
   runs-on : ubuntu-latest
   steps :
-  -uses : actions/checkout@v1
-  -uses : ./action-a
+  -uses : 
+        actions/checkout@v1
+        ./action-a
   with : 
     MY_NAME : "Chakrapani"
   
