--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -18,5 +18,5 @@ jobs:
       - name : Multi-line bash
         run : 
             echo  "I am" 
-            echo  "a multi-line" 
-            echo  "script" 
+                  "a multi-line" 
+                  "script" 
