--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -18,5 +18,5 @@ jobs:
       - name : Multi-line bash
         run : 
             echo  "I am" 
-                  "a multi-line" 
-                  "script" 
+            echo  " a multi-line" 
+            echo  " script" 
