--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -20,3 +20,10 @@ jobs:
             echo  "I am" 
             echo  " a multi-line" 
             echo  " script" 
+
+    echo-GoodBy:
+      runs-on: ubuntu-slim
+      steps:
+        -name : Say GoodBye
+          run : echo "GoodBye!:"
+          
