--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-slim
     steps:
       - name : Say GoodBye
-        run : echo "GoodBye!:"
-          
+        run : echo "GoodBye!:"          
       - name: Event Name
-        run:  echo "Event name: ${{github.event-name}}"  #Context variable
+        run :
+           echo "Event name: ${{github.event-name}}"  #Context variable
