--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -27,5 +27,6 @@ jobs:
       - name : Say GoodBye
         run : echo "GoodBye!:"          
       - name: Event Name
-          run :
-            echo "Event name: ${{github.event-name}}"  #Context variable
+          run:
+            echo "Event name: ${{github.event-name}}"  
+            #Context variable
