--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -28,4 +28,6 @@ jobs:
         run : echo "GoodBye!:"    
         
       - name : Event Name
-        run :  echo  "Event name  ${{github.event-name}}" #Context variable
+        run :  
+            echo  "Event name:"
+                  "${{github.event-name}}" #Context variable
