--- a/.github/workflows/firstworkflow.yml
+++ b/.github/workflows/firstworkflow.yml
@@ -31,3 +31,11 @@ jobs:
         run : 
             echo "Event name ${{github.event_name}} " 
             #Context variable
+  windows-echo:
+    if: github.event_name == 'push'
+    run-on : windows_latest
+    steps:
+      - name: Show OS
+        shell: bash
+        run:
+           echo "The job is running on an Windows runner"
